--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
       plantuml: {
         skin: 'default',
       },
-      toc: {
-        scope: '.markdown-section',
-        headings: 'h1, h2, h3, h4, h5, h6',
-        title: 'Table of Contents',
-      },
+      // toc: {
+      //   scope: '.markdown-section',
+      //   headings: 'h1, h2, h3, h4, h5, h6',
+      //   title: 'Table of Contents',
+      // },
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
@@ -93,7 +93,7 @@
   <script src="//unpkg.com/prismjs/components/prism-go.min.js"></script>
   <script src="//unpkg.com/docsify-plantuml/dist/docsify-plantuml.min.js"></script>
   <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
-  <script src="https://unpkg.com/docsify-toc@1.0.0/dist/toc.js"></script>
+  <!-- <script src="https://unpkg.com/docsify-toc@1.0.0/dist/toc.js"></script> -->
   <script src="//unpkg.com/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
 </body>
 
